--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
+    "chokidar": "^3.5.2",
     "date-fns": "^2.22.1",
     "google-maps-react": "^2.0.6",
     "js-cookie": "^2.2.1",
