--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "test": "craco test",
     "eject": "react-scripts eject"
   },
+  "proxy":"http://localhost:8000",
   "eslintConfig": {
     "extends": [
       "react-app",
