--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bulma": "^0.9.3",
     "chokidar": "^3.5.2",
+    "@craco/craco": "^6.1.2",
     "date-fns": "^2.22.1",
     "google-maps-react": "^2.0.6",
     "js-cookie": "^2.2.1",
